--- a/static/mainapp/css/explore.css
+++ b/static/mainapp/css/explore.css
@@ -1,12 +1,8 @@
 .hide {
- all: unset;
-    all: unset; 
     display: none;
 }
 
 .centre {
- all: unset;
-    all: unset;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -14,22 +10,16 @@
 }
 
 .data:hover+.hide {
- all: unset;
-    all: unset;
     display: block;
     color: red;
 }
 
 .hide:hover {
- all: unset;
-    all: unset;
     display: block;
     color: red;
 }
 
 .cover-img-size {
- all: unset;
-    all: unset;
     width: 200px;
     height: 300px;
     margin-right: 22px;
@@ -38,21 +28,15 @@
 }
 
 .content {
- all: unset;
-    all: unset;
     width: 200px;
 }
 
 .title {
- all: unset;
-    all: unset;
     font-family: "Sora", sans-serif;
     color: #d7722c;
 }
 
 .author {
- all: unset;
-    all: unset;
     font-family: "Rockwell", serif;
     font-weight: bold;
 }
@@ -60,37 +44,27 @@
 #demo,
 #demo2,
 #demo3 {
- all: unset;
-    all: unset;
     padding-left: 6.5%;
     padding-bottom: 1%;
 }
 
 .rateYo {
- all: unset;
-    all: unset;
     margin-left: auto;
     margin-right: auto;
     display: none;
 }
 
 .small-screen {
- all: unset;
-    all: unset;
     display: none;
 }
 
 .card-deck {
- all: unset;
-    all: unset;
     padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 2%;
 }
 
 .card {
- all: unset;
-    all: unset;
     transition: 0.5s;
     cursor: pointer;
     border-radius: 3px;
@@ -98,8 +72,6 @@
 }
 
 .card-img {
- all: unset;
-    all: unset;
     flex-shrink: 0;
     bottom: -35px;
     left: 35px;
@@ -112,25 +84,19 @@
 }
 
 .card-img:hover {
- all: unset;
-    all: unset;
     transform: scale(1.07);
 }
 
 .card-horizontal {
- all: unset;
-    all: unset;
     display: flex;
     flex: 1 1 auto;
 }
 
 .card-body-wrap {
- all: unset;
     display: flex;
 }
 
 .card-title {
- all: unset;
     font-family: "Sora", sans-serif;
     font-size: large;
     color: #d7722c;
@@ -138,7 +104,6 @@
 
 .card::before,
 .card::after {
- all: unset;
     position: absolute;
     top: 0;
     right: 0;
@@ -151,12 +116,10 @@
 }
 
 .card::before {
- all: unset;
     transform-origin: left top;
 }
 
 .card::after {
- all: unset;
     transform-origin: right bottom;
 }
 
@@ -164,12 +127,10 @@
 .card:hover::after,
 .card:focus::before,
 .card:focus::after {
- all: unset;
     transform: scale3d(1, 1, 1);
 }
 
 .more-details {
- all: unset;
     text-align: center;
     background-color: #3d348b;
     color: #fff;
@@ -182,7 +143,6 @@
 }
 
 .more-details:hover {
- all: unset;
     color: #3d348b;
     background: white;
     border: 2px solid #3d348b;
@@ -190,7 +150,6 @@
 }
 
 .rating-block {
- all: unset;
     display: inline-block;
     text-align: center;
     background-color: #31c2cf;
@@ -205,18 +164,15 @@
 
 .rating-block.btn,
 .btn.more-details {
- all: unset;
     padding: 8px;
 }
 
 .rating-block:hover {
- all: unset;
     text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
     transition: all 0.4s ease 0s;
 }
 
 .card-text {
- all: unset;
     font-family: "Rockwell", serif;
     color: black;
     font-weight: bold;
@@ -231,56 +187,43 @@
 }
 
 @media (max-width: 420px) {
-
     .cover-img-size {
- all: unset;
         margin-left: 53px;
     }
     .content {
- all: unset;
         margin-left: 53px;
     }
     .hide {
- all: unset;
         display: block;
     }
     .rating-block {
- all: unset;
         margin-left: 5%;
     }
     .more-details {
- all: unset;
         right: 15%;
     }
     .large-screen {
- all: unset;
-        display: flex;
+        display: none;
     }
     .small-screen {
- all: unset;
         display: inline;
     }
     .card,
     .card-deck {
- all: unset;
         margin: auto;
     }
     .cover-img-size {
- all: unset;
         margin: auto;
         margin-top: 8%;
     }
     .row {
- all: unset;
         margin-bottom: 5%;
     }
 }
 
 @media (max-width: 390px) {
-
     .card,
     .card-deck {
- all: unset;
         margin-left: -1.5%;
     }
 }
