--- a/static/mainapp/css/explore.css
+++ b/static/mainapp/css/explore.css
@@ -1,15 +1,13 @@
-.hide {
-    display: none;
-}
+
 
 .centre {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 1rem;
+    padding: 2rem;
 }
 
-.data:hover+.hide {
+/* .data:hover+.hide {
     display: block;
     color: red;
 }
@@ -17,21 +15,25 @@
 .hide:hover {
     display: block;
     color: red;
-}
+} */
 
 .cover-img-size {
     width: 200px;
-    height: 300px;
+    height: 250px;
     margin-right: 22px;
     margin-top: 2px;
     margin-bottom: 4px;
 }
 
 .content {
-    width: 200px;
+    /* width: 200px; */
+    margin-top: 30px;
+    margin-left: 10px;
+    margin-bottom: 30px;
+    margin-right: 10px;
 }
 
-.title {
+/* .title {
     font-family: "Sora", sans-serif;
     color: #d7722c;
 }
@@ -39,7 +41,7 @@
 .author {
     font-family: "Rockwell", serif;
     font-weight: bold;
-}
+} */
 
 #demo,
 #demo2,
@@ -59,28 +61,35 @@
 }
 
 .card-deck {
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom: 2%;
+    padding-top: 10%;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 10%;
+  
 }
 
 .card {
     transition: 0.5s;
     cursor: pointer;
-    border-radius: 3px;
+    background-color: #FAD4D4;
+    border: none;
+    border-radius: 5px;
+    padding-left: 0;
     box-shadow: -2px 6px 19px 0px #7f818e;
 }
 
 .card-img {
     flex-shrink: 0;
+    border: none;
     bottom: -35px;
     left: 35px;
-    border-radius: 3px;
+    border-radius: 5px;
     box-shadow: -2px 6px 19px 0px #7f818e;
     transition: 0.3s ease;
-    width: 85%;
-    height: 60%;
+    width: 300px;
+    height: 300px;
     margin: 0 auto;
+    padding: 0;
 }
 
 .card-img:hover {
@@ -97,9 +106,10 @@
 }
 
 .card-title {
-    font-family: "Sora", sans-serif;
-    font-size: large;
+    font-family: 'Raleway', sans-serif;
+    font-size: x-large;
     color: #d7722c;
+    font-weight: bolder;
 }
 
 .card::before,
@@ -132,34 +142,36 @@
 
 .more-details {
     text-align: center;
-    background-color: #3d348b;
+    background-color: #FF5D5D;
     color: #fff;
     font-weight: 600;
-    font-size: 11px;
+    font-size: 14px;
     border-radius: 20px;
     position: absolute;
     bottom: 10px;
     right: 2%;
+    font-family: 'Raleway', sans-serif;
 }
 
 .more-details:hover {
-    color: #3d348b;
+    color: #FF5D5D;
     background: white;
-    border: 2px solid #3d348b;
-    text-shadow: 1px 1px 3px #727ff0;
+    border: 2px solid #FF5D5D;
+    text-shadow: 1px 1px 3px #FF8C8C;
 }
 
 .rating-block {
     display: inline-block;
     text-align: center;
-    background-color: #31c2cf;
+    background-color: white;
     font-weight: 600;
-    font-size: 11px;
+    font-size: 14px;
     border-radius: 20px;
     position: absolute;
     bottom: 10px;
     left: 4%;
     padding: 8px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .rating-block.btn,
@@ -173,11 +185,12 @@
 }
 
 .card-text {
-    font-family: "Rockwell", serif;
+    font-family: 'Open Sans', sans-serif;
     color: black;
-    font-weight: bold;
-    font-size: 15px;
-    padding-bottom: 1px;
+    font-weight: 300;
+
+    font-size: 18px;
+    padding-bottom: 30px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
