--- a/static/mainapp/css/genre.css
+++ b/static/mainapp/css/genre.css
@@ -1,11 +1,22 @@
 .genre-head,
 .topbook-head {
-    font-family: "Lobster", cursive;
-    font-size: 300%;
+    font-family: 'Raleway', sans-serif;
+    font-size: 35px;
     background-color: #d7722c;
-    margin-top: 0px;
+    /* margin-top: 15px; */
     color: white;
+    width: 50%;
+    margin: auto;
+    border-radius: 5px;
 }
+
+.centre {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 2rem;
+}
+
 
 .card-horizontal {
     display: flex;
@@ -14,14 +25,16 @@
 
 .card-img {
     flex-shrink: 0;
+    border: none;
     bottom: -35px;
     left: 35px;
-    border-radius: 3px;
+    border-radius: 5px;
     box-shadow: -2px 6px 19px 0px #7f818e;
     transition: 0.3s ease;
-    width: 85%;
-    height: 60%;
+    width: 280px;
+    height: 300px;
     margin: 0 auto;
+    padding: 0;
 }
 
 .card-img:hover {
@@ -35,22 +48,34 @@
 .card {
     transition: 0.5s;
     cursor: pointer;
-    border-radius: 3px;
+    background-color: #FAD4D4;
+    border: none;
+    border-radius: 5px;
+    padding-left: 0;
     box-shadow: -2px 6px 19px 0px #7f818e;
 }
 
 .card-title {
-    font-family: "Sora", sans-serif;
-    font-size: large;
+    font-family: 'Raleway', sans-serif;
+    font-size: x-large;
     color: #d7722c;
+    font-weight: bolder;
+    text-align: justify;
 }
 
 .card-text {
-    font-family: "Rockwell", serif;
+    font-family: 'Open Sans', sans-serif;
     color: black;
-    font-weight: bold;
-    font-size: 15px;
-    padding-bottom: 1px;
+    font-weight: 300;
+    text-align: justify;
+    font-size: 18px;
+    padding-bottom: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    /* number of lines to show */
+    -webkit-box-orient: vertical;
 }
 
 .card::before,
@@ -83,39 +108,53 @@
 
 .more-details {
     text-align: center;
-    background-color: #3d348b;
+    background-color: #FF5D5D;
     color: #fff;
     font-weight: 600;
-    font-size: 11px;
+    font-size: 14px;
     border-radius: 20px;
     position: absolute;
     bottom: 10px;
-    right: 10%;
+    right: 2%;
+    font-family: 'Raleway', sans-serif;
 }
 
 .more-details:hover {
-    color: #3d348b;
+    color: #FF5D5D;
     background: white;
-    border: 2px solid #3d348b;
-    text-shadow: 1px 1px 3px #727ff0;
+    border: 2px solid #FF5D5D;
+    text-shadow: 1px 1px 3px #FF8C8C;
 }
 
 .rating-block {
     display: inline-block;
     text-align: center;
-    background-color: #31c2cf;
+    background-color: white;
     font-weight: 600;
-    font-size: 11px;
+    font-size: 14px;
     border-radius: 20px;
     position: absolute;
-    padding: 8px;
     bottom: 10px;
-    left: 10%;
+    left: 4%;
+    padding: 8px;
+    font-family: 'Raleway', sans-serif;
+    border: #7f818e;
 }
 
 .rating-block:hover {
     text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
     transition: all 0.4s ease 0s;
+}
+
+.rating-block.btn,
+.btn.more-details {
+    padding: 8px;
+}
+
+.rating-block:hover {
+    text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+    transition: all 0.4s ease 0s;
+    background-color: #7f818e;
 }
 
 .rateYo {
@@ -152,5 +191,12 @@
     .card-deck {
         padding-right: 0;
         padding-left: 8%;
+    }
+}
+
+@media (max-width: 390px) {
+    .card,
+    .card-deck {
+        margin-left: -1.5%;
     }
 }
