--- a/static/mainapp/css/login.css
+++ b/static/mainapp/css/login.css
@@ -1,7 +1,10 @@
 .account-block {
-    margin: auto;
+    /* margin: auto; */
+    margin-top: 100px;
+    /* margin-left: 30px; */
+    /* margin-right: 30px; */
     height: 80%;
-    width: 70%;
+    width: 100%;
     background-color: white;
 }
 
@@ -35,14 +38,17 @@
 }
 
 .welcome {
-    font-family: "Pacifico", cursive;
+    font-family: "Raleway", sans-serif;
     position: relative;
-    top: 12%;
-    left: 28%;
-    border-radius: 50px;
-    font-size: 2.2rem;
-    background-color: #ffdab9;
-    width: 44%;
+    top: 8%;
+    left: 18%;
+    /* border-radius: 50px; */
+    font-size: 3rem;
+    background-color: #fad4d4;
+    width: 60%;
+    border-radius: 5px;
+    margin-bottom: 50px;
+    /* width: 35%; */
 }
 
 label {
@@ -51,12 +57,29 @@ label {
 }
 
 .form-group {
-    padding: 6% 8% 8% 8%;
+    padding: 3% 4% 4% 3%;
     position: relative;
     display: inline-block;
-    top: 80px;
-    color: black;
+    width: 80%;
+    top: 25px;
+    color: #354259;
+    outline: none;
 }
+input {
+    outline: none;
+    /* border: none; */
+  }
+  
+  textarea:focus,
+  input:focus {
+    outline: none;
+  }
+  
+  *:focus {
+    outline: none;
+  }
+
+
 
 #id_login,
 #id_password {
@@ -64,27 +87,28 @@ label {
     border-left: none;
     border-right: none;
     color: #000;
+    width: 80%;
 }
 
 .loginbutton {
-    font-family: "Fredoka One", cursive;
-    padding: 8px 10px 5px 10px;
-    font-size: 1rem;
-    margin-bottom: 1.6rem;
-    margin-top: 1rem;
-    border: 2px solid white;
-    box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.5);
-    border: 3px solid #fff;
-    color: #fff;
-    background: rgba(1, 1, 1);
-    border-radius: 15px;
-    outline: none;
+    font-family: "Raleway", sans-serif;
+  padding: 8px 10px 5px 10px;
+  font-size: 1rem;
+  margin-bottom: 3rem;
+  margin-top: 0.5rem;
+  border: 2px solid white;
+  box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.5);
+  border: 3px solid #fff;
+  color: #fff;
+  background: #354259;
+  border-radius: 15px;
+  outline: none;
 }
 
 .loginbutton:hover {
-    background-color: #ffdab9;
+    background-color: #fad4d4;
     color: black;
-    border: 3px solid black;
+    border: 3px solid #354259;
 }
 
 fa-google {
@@ -110,8 +134,13 @@ fa-google {
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
     position: relative;
-    left: 30px;
+    text-decoration: none;
+    left: 25px;
     top: 10px;
+    margin-top: 50px;
+    color: #354259;
+    margin-bottom: 50px;
+    margin-left: 0;
 }
 
 .googlebutton:hover {
