--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,10 +13,10 @@ Login
 {% endblock head %}
 
 {% block main %}
-<div class="container account-block ">
+<div class="container-fluid account-block ">
     <div class="h-100 row">
-        <div class="h-100 col-12 col-sm-12 col-xl-8 signin-block">
-            <h3 class="welcome">Welcome Back!</h3>
+        <div class="col-12 col-sm-12 col-xl-8 signin-block">
+            <h3 class="welcome" style="font-weight: 500;">Login<br> <span style="font-size: 25px;">Books4U</span> </h3>
             <form method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 <div class="form-group">
@@ -26,9 +26,12 @@ Login
                     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                     {% endif %}
                     <!-- <label for="id_password"> Password</label><br> -->
-                    {{ form.password }}<br>
+                    {{ form.password }}<br><br>
+                    <br>
                     <a class="forgotpassword" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
                     <br>
+                    <br>
+                   
                     {% if form.errors %}
                     {% for field in form %}
                     {% for error in field.errors %}
@@ -43,12 +46,11 @@ Login
                     <br>
                 </div>
             </form>
-            <a href="{% provider_login_url 'google' %}"><button class="googlebutton"><i class="fa fa-google fa-x"
-                aria-hidden="true"></i> Sign In With Google</button></a>
+     
 
         </div>
-        <div class="h-100 hidden-sm col-xl-4 img-block mw-100" style="background-image : url('{% static "mainapp/png/BookSignUp.webp" %}')">
-            <a class="btn-bot" href="{% url 'account_signup' %}">SIGN UP</a>
+        <div class="h-100 hidden-sm col-xl-4 img-block mw-100" style="background-image : url('{% static "mainapp/png/login/register.webp" %}')">
+            <!-- <a class="btn-bot" href="{% url 'account_signup' %}">SIGN UP</a> -->
         </div>
     </div>
 </div>
