--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -13,10 +13,11 @@ Sign Up
 {% endblock head %}
 
 {% block main %}
-<div class="container account-block ">
+<div class="container-fluid account-block ">
     <div class="h-100 row">
-        <div class="h-100 col-12 col-sm-12 col-xl-8 signup-block">
-            <h3 class="welcome">Welcome!</h3>
+        <div class=" col-12 col-sm-12 col-xl-8 signup-block">
+            <h3 class="welcome" style="font-weight: 500;">Register<br> <span style="font-size: 25px;">Books4U</span> </h3>
+
             <form method="POST" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 <div class="form-group">
@@ -48,12 +49,12 @@ Sign Up
                 </div>
 
             </form>
-            <a href="{% provider_login_url 'google' %}"><button class="googlebutton"><i class="fa fa-google fa-x"
-                aria-hidden="true"></i> Sign Up With Google</button></a>
+            <!-- <a href="{% provider_login_url 'google' %}"><button class="googlebutton"><i class="fa fa-google fa-x"
+                aria-hidden="true"></i> Sign Up With Google</button></a> -->
 
         </div>
-        <div class="h-100 hidden-sm col-xl-4 img-block mw-100" style="background-image : url('{% static "mainapp/png/BookSignIn.webp" %}')">
-            <a class="btn-bot" href="{% url 'account_login' %}">SIGN IN</a>
+        <div class="h-100 hidden-sm col-xl-4 img-block mw-100" style="background-image : url('{% static "mainapp/png/login/login.webp" %}')">
+            <!-- <a class="btn-bot" href="{% url 'account_login' %}">SIGN IN</a> -->
         </div>
     </div>
 </div>
