--- a/templates/mainapp/genre.html
+++ b/templates/mainapp/genre.html
@@ -7,25 +7,37 @@ Genre
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'mainapp/css/genre.css' %}" />
-<link rel="stylesheet" href="{% static 'mainapp/css/tailwind.min.css' %}"> 
-<link rel="stylesheet" href="{% static 'mainapp/css/bootstrap.min.css' %}" />
+<!-- <link rel="stylesheet" href="{% static 'mainapp/css/tailwind.min.css' %}"> 
+<link rel="stylesheet" href="{% static 'mainapp/css/bootstrap.min.css' %}" /> -->
 {% endblock head %}
 
 
 {% block main %}
 
-<h1 class="genre-head text-center pt-3 pb-3">{{ genre }}</h1>
+<h1  style=" margin-top: 100px;" class="genre-head text-center pt-3 pb-3">{{ genre }}</h1>
+<div
+        style="width: 30%;
+          margin: auto;
+          margin-top: 30px;
+          margin-bottom: 10px;
+          border: 0;
+          height: 0;
+          box-shadow: 0 0 10px 1px #F77E21;"
+      ></div> 
 
 
-<div class="card-deck ">
+<div class="centre card-deck ">
     {% for book in genre_topbook %}
 
-    <div class="card col-sm-12 col-lg-3 " style="width: 300px;">
-        <div class="row no-gutters">
+    <div class="card col-sm-12 col-lg-3 " style="margin-bottom: 50px;" >
+        <div class="row">
             <img class="card-img  mt-4 " src="{{book.image_url}}" alt="book Card">
-            <div class="card-body text-center">
-                <h5 class="card-title">{{book.original_title|truncatechars:35}}</h5>
-                <p class="card-text"><i>by {{book.authors|truncatechars:25}}</i></p>
+            <div style=" margin-top: 30px;
+            margin-left: 10px;
+            margin-bottom: 30px;
+            margin-right: 10px;" class="card-body text-center">
+                <h5 class="card-title">{{book.original_title|truncatechars:50}}</h5>
+                <p class="card-text"> {{book.authors|truncatechars:50}}</p>
             </div>
         </div><br>
         <a href="javascript:;" onclick='bookDetails(this)' class="btn more-details"
@@ -47,11 +59,20 @@ Genre
 
 
 
-    {% if forloop.counter|divisibleby:"4"  %}
+    <!-- {% if forloop.counter|divisibleby:"4"  %}
 </div>
 <div class="card-deck  ">
-    {% endif %}
+    {% endif %} -->
     {% endfor %}
+    </div>
 </div><!-- The final deck is closed here, outside the loop -->
-
+<div
+        style="width: 30%;
+          margin: auto;
+          margin-top: 5px;
+          margin-bottom: 10px;
+          border: 0;
+          height: 0;
+          box-shadow: 0 0 10px 1px #F77E21;"
+      ></div> 
 {% endblock main %}
