--- a/templates/mainapp/layout.html
+++ b/templates/mainapp/layout.html
@@ -25,7 +25,8 @@
     <!-- Reset styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
     <!-- css -->
-    <link rel="stylesheet" href="{% static 'mainapp/css/layout.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'mainapp/css/layout.css' %}"> -->
+      <link rel="stylesheet" href="{% static 'mainapp/css/homeLayout.css' %}">
     <!-- icon -->
     <!-- <link rel="icon" href="{% static 'mainapp/png/logo.webp' %}" /> -->
     <link rel="icon" href="{% static 'mainapp/favicon_io/favicon.ico' %}" />
@@ -38,46 +39,16 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #354259;">
-        <div class="container-fluid">
-            <a class="navbar-brand" style="font-family: 'Handlee'; color: #FBCB0A; font-size:30px; font-weight:800"
-                href="{% url 'index' %}">  <img style="width: 100px; height:40px" src="{% static 'mainapp/logo/book-navbar.webp' %}" alt="Slide">  Books4U</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- Search Bar -->
-            <div class="searchbar" id="searchdropdown">
-                <input type="text" id="bookName" onkeyup="myFunction()" placeholder="&#xf002    Search for books"
-                    title="Type in a name" style="outline: none;font-family:FontAwesome, kumbh sans;">
-                <div class="dropdown-content" id="search-dropdown">
-                </div>
-            </div>
-            <!-- End Search Bar -->
 
-            <!-- <form class="d-flex" role="search">
-            <input id="bookName" onkeyup="myFunction()"  class="form-control me-2" type="&#xf002    Search for books" title="Type in a name" style="outline: none;font-family:FontAwesome, kumbh sans;" placeholder="Search" aria-label="Search">
-            <div class="dropdown-content" id="search-dropdown"></div>
-          </form> -->
-            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link"
-                        style="color:#FFF2F2; font-family: 'Raleway', sans-serif;font-weight: 500; font-size: 18px;"
-                        href="{% url 'index' %}">
-                        <!-- <i class="nav-icon-s fa fa-home" style="font-size: 25px;" aria-hidden="true"></i>Home -->
-                        Home
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link"
-                        style="color:#FFF2F2; font-family: 'Raleway', sans-serif;font-weight: 500; font-size: 18px;"
-                        href="{% url 'explore_books' %}">
-                        <!-- <i class="nav-icon-s fa fa-globe fa-2x" aria-hidden="true"></i><br>Explore -->
-                        Explore
-                    </a>
-                </li>
-
+    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #354259;">
+        <a class="navbar-brand" style="font-family: 'Handlee'; color: #FBCB0A; font-size:30px; font-weight:800"
+        href="{% url 'index' %}">  <img style="width: 100px; height:40px" src="{% static 'mainapp/logo/book-navbar.webp' %}" alt="Slide">  Books4U</a>
+        <button class="navbar-toggler" style="background-color:#FFF2F2 ;" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <div class="dropdown">
@@ -85,10 +56,10 @@
                             class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <!-- <i class="nav-icon-s fa fa-bookmark fa-2x" aria-hidden="true"></i><br>Library -->
-                            Library
+                            Profile
                         </a>
 
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                        <div  class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="{% url 'book_recommendations' %}"><i class="material-icons"
                                     style="vertical-align: -6px;">auto_stories</i>&nbsp; Your Read</a>
                             <div class="dropdown-divider"></div>
@@ -97,52 +68,89 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'read_books' %}"><i class="material-icons"
                                     style="vertical-align: -6px;">star</i>&nbsp; Rated Books</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{% url 'account_logout' %}"><i class="material-icons"
+                                        style="vertical-align: -6px;">exit_to_app</i>&nbsp; Logout</a>     
                         </div>
                     </div>
+                </li>
+              
+                {% else %}
+                <li class="nav-item">
+                    <a  style="color:#FFF2F2; font-family: 'Raleway', sans-serif;font-weight: 500; font-size: 18px;" class="nav-link" href="{% url 'account_login' %}">
+                        <!-- <i class="nav-icon-s fa fa-sign-in fa-2x" aria-hidden="true"></i> -->
+                        
+                        <!-- <br> -->
+                        Login
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color:#FFF2F2; font-family: 'Raleway', sans-serif;font-weight: 500; font-size: 18px;"  href="{% url 'account_signup' %}">
+                        <!-- <i class="nav-icon-s fa fa-user fa-2x" aria-hidden="true"></i> -->
+                        <!-- <br> -->
+                        Register
+                    </a>
+                </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link"
+                        style="color:#FFF2F2; font-family: 'Raleway', sans-serif;font-weight: 500; font-size: 18px;"
+                        href="{% url 'explore_books' %}">
+                        <!-- <i class="nav-icon-s fa fa-globe fa-2x" aria-hidden="true"></i><br>Explore -->
+                        Explore
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
                         style="color:#FFF2F2; font-family: 'Raleway', sans-serif;font-weight: 500; font-size: 18px;"
-                        href="{% url 'account_logout' %}">
-                        <!-- <i class="nav-icon-s fa fa-sign-in fa-2x" aria-hidden="true"></i><br>Logout -->
-                        Logout
-                    </a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account_login' %}">
-                        <i class="nav-icon-s fa fa-sign-in fa-2x" aria-hidden="true"></i><br>Login
+                        href="{% url 'about' %}">
+                        <!-- <i class="nav-icon-s fa fa-home" style="font-size: 25px;" aria-hidden="true"></i>Home -->
+                        About
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account_signup' %}">
-                        <i class="nav-icon-s fa fa-user fa-2x" aria-hidden="true"></i><br>Signup
+                    <a class="nav-link"
+                        style="color:#FFF2F2; font-family: 'Raleway', sans-serif;font-weight: 500; font-size: 18px;"
+                        href="{% url 'contact' %}">
+                        <!-- <i class="nav-icon-s fa fa-home" style="font-size: 25px;" aria-hidden="true"></i>Home -->
+                        Contact
                     </a>
                 </li>
-                {% endif %}
+    
+
+           
             </ul>
-            <!-- Search Bar -->
-
 
         </div>
-        </div>
-    </nav>
+      </nav>
+
+   
     <!-- Messages -->
     {% for message in messages %}
-    <div class="alert {{ message.tags }} alert-dismissible text-center" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+
+    <div  style="margin-top: 100px; background-color: #d7722c; color: #FFF2F2; font-size: 22px;     font-family: 'Raleway';" class="alert {{ message.tags }} alert-dismissible text-center" role="alert">
+        {{ message }}
+        <button style="outline: none; border:none; width:35px;" type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
-        {{ message }}
+        
     </div>
     {% endfor %}
+
+
     <!-- Bootstrap modal -->
+
+    <!-- Button trigger modal -->
+
+
+
+
     <div class="modal fade" id="bookModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title" id="booktitle">Basic Modal</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -152,7 +160,7 @@
                         <div class="col-8">
                             <strong>Summary: </strong><br>
                             <img id="loading" src="{% static 'mainapp/gif/loading.gif' %}">
-                            <p id="booksummary">
+                            <p style="text-align: justify; text-justify:inter-word" id="booksummary">
 
                             </p>
                             <strong>Authors:</strong>
@@ -163,7 +171,7 @@
                         </div>
 
                         <div class="col-4">
-                            <img class="img-book" src="" id="bookimage">
+                            <img style="width: 150px; height: 200px;" class="img-book" src="" id="bookimage">
                         </div>
                         {% if user.is_authenticated %}
                         <button id="save-book-button" class="btn">Save for Later</button>
@@ -171,7 +179,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button"  style="background-color: #354259; color: #FFF2F2;" class="btn" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
@@ -215,7 +223,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js" crossorigin="anonymous"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
